# Nano-Banana-Tech-Diagram-Maker

./: README.md  build-deb.sh  pyproject.toml
src/nano_whiteboard_doctor/: app.py  cli.py
src/whiteboard_makeover/: __main__.py  app.py  cli.py
ts-src/: mcp-server.ts
