[project]
name = "whiteboard-makeover"
version = "0.2.0"
description = "Desktop GUI tool that cleans up whiteboard photos using Fal AI Nano Banana 2"
authors = [{ name = "Daniel Rosehill", email = "public@danielrosehill.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pyqt6>=6.11.0",
]

[project.scripts]
whiteboard-makeover = "whiteboard_makeover.cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
